Code reviewer suggestion fix[sammary]#Font family errors fix. h1 font weight changed and background image overflowing error fix.

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 /* Styles for the header section. For mobile viewport only */
+@import url('https://fonts.googleapis.com/css2?family=Crete+Round&display=swap');
+
 body {
   background-color: #1c1a19;
   box-sizing: border-box;
@@ -6,7 +8,7 @@ body {
   margin: 0;
 }
 
-nav ul {
+.header-container {
   display: flex;
   justify-content: space-between;
   background-color: rgb(56, 56, 56);
@@ -15,43 +17,47 @@ nav ul {
   padding: 0.625em;
 }
 
-nav {
+header {
   width: 100%;
   background-color: rgb(56, 56, 56);
 }
 
-p {
+.logo {
   color: white;
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.375em;
+  font-size: 1.125em;
   font-weight: 700;
   letter-spacing: 0;
+  background-color: rgb(56, 56, 56);
+  text-decoration: none;
 }
 
 img {
   align-self: center;
+  height: 0.72em;
 }
 
 /* Styles for the hero section. For mobile viewport only */
 h1 {
   font-family: 'Crete Round', 'Helvetica Neue', sans-serif;
   font-size: 3.5em;
-  font-weight: 700;
+  font-weight: 400;
   color: #ff6b00;
 }
 
 h4 {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.5em;
-  font-weight: 900;
+  font-size: 1.375em;
+  font-weight: 700;
   color: #fff5e1;
 }
 
 .para {
   font-family: 'Poppins', sans-serif;
   font-size: 1em;
-  font-weight: 540;
+  font-weight: 400;
   line-height: 1.5em;
+  color: white;
 }
 
 .anchor {
@@ -61,11 +67,15 @@ h4 {
 }
 
 .hero {
-  width: 97%;
+  width: 88%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+li {
+  list-style: none;
 }
 
 h1,
@@ -87,4 +97,6 @@ h4,
   background-repeat: no-repeat;
   background-position-x: right;
   background-position-y: bottom;
+  background-size: 50% 50%;
+  width: 99%;
 }
